refactor(features): all features should be under /features/** to prevent conflicts with the rest of the app
- simplify the way we configure gcp api config to allow all routes under /features/**
- rename folder "modules" to features and update related imports
